more vec3 obj